Revised history (windowhist is now cumehist)
svn path=/software/LOOS/trunk/; revision=12662

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,7 +43,7 @@
 2014-03-13    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed help info for dcdinfo 
-	* Added windowed histogram tool (histsweep)
+	* Added cumulative histogram tool (histsweep)
 	* Changed XForm::rotate(const GCoord&, const greal)
 	to throw an invalid_argument exception if the
 	rotation axis does not have some minimal length. 
