--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-07-18    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released 2.1.3
+
 2014-07-17    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in rebond that created bonds from subset atoms to themselves
