--- a/loos.dox
+++ b/loos.dox
@@ -225,6 +225,7 @@ and expect it to be substituted with the appropriate value, for example.
 <tr align="center"><td>chainid</td><td>Chain ID</td><td>string</td><td>&gt;, &gt;=, &lt;=, &lt;, ==, !=, =~</td></tr>
 <tr align="center"><td>all</td><td>Evaluates to true</td><td>number</td><td></td></tr>
 <tr align="center"><td>hydrogen</td><td>Evaluates to true if atom is a hydrogen</td><td>number</td><td></td></tr>
+<tr align="center"><td>backbone</td><td>Evaluates to true if atom is a backbone atom (nucleic acids and proteins, and includes hydrogens)</td><td>number</td><td></td></tr>
 </table>
 
 Notes:\n
