--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-15    <alan@membrane.urmc.rochester.edu>
+
+	* Add OptimalMembraneGenerator to Packages
+
 2014-08-26    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed BackboneSelector to now include backbone hydrogens
