--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-10-21    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed default occupancy in atoms to be 1.0
+	* Changed PDB reader so missing fields (to the right of
+	coordinates) will be tolerated and default values used.
+	See new functions to test for presence of missing data.
+	A one-time warning will be printed if missing fields are
+	found.
+
 2014-10-15    <alan@membrane.urmc.rochester.edu>
 
 	* Add OptimalMembraneGenerator to Packages
