--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-11-20    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Deprecated gridify() in dcd_utils.cpp
+
 2014-08-26    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed BackboneSelector to now include backbone hydrogens
