update to reflect adding solvate.py to OMG
svn path=/software/LOOS/trunk/; revision=13643

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-10    <alan@membrane.urmc.rochester.edu>
+
+	* Added solvate.py to OptimalMembraneGenerator, to build 
+	protein in water systems without lipids
+
 2014-12-09    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in aligner that caused incorrect output when using subset of
