--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-12-16    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed aligner, smooth-traj, reimage-by-molecule, and
+	serialize-selection to allow selecting the output trajectory
+	format.
+
 2014-12-10    <alan@membrane.urmc.rochester.edu>
 
 	* Added solvate.py to OptimalMembraneGenerator, to build 
