--- a/INSTALL
+++ b/INSTALL
@@ -180,9 +180,11 @@ For Amber NetCDF support, also install the netcdf development package:
 
 sudo yum install netcdf-devel
 
-Fedora 21: Atlas has been split into satlas (serial) and tatlas
-(threaded).  To build, you will need to copy the custom.py-proto to
-custom.py and set ATLAS_LIBS to whichever version of atlas you prefer.
+* Fedora 21*
+
+Atlas has been split into satlas (serial) and tatlas (threaded).  To
+build, you will need to copy the custom.py-proto to custom.py and set
+ATLAS_LIBS to whichever version of atlas you prefer.
 
 
 
@@ -207,9 +209,10 @@ for Fedora, however there is no scons package available via yum.
 Instead, download and install any version of scons more recent than
 1.0.
 
-CentOS 7: Atlas has been split into satlas (serial) and tatlas
-(threaded).  To build, you will need to copy the custom.py-proto to
-custom.py and set ATLAS_LIBS to whichever version of atlas you prefer.
+* CentOS 7*
+Atlas has been split into satlas (serial) and tatlas (threaded).  To
+build, you will need to copy the custom.py-proto to custom.py and set
+ATLAS_LIBS to whichever version of atlas you prefer.
 
 
 * PyLOOS *
@@ -381,6 +384,7 @@ the excess versions)
 
 
 			 -----= CYGWIN =-----
+			    (UNSUPPORTED)
 
 You will need to install libboost-devel and liblapack-devel along with
 the g++ compiler using the cygwin setup.exe program.  (Note: if loos
@@ -410,6 +414,7 @@ Cygwin is NOT SUPPORTED
 
 
 			-----= FreeBSD =-----
+			    (UNSUPPORTED)
 
 LOOS has been tested with FreeBSD 8.  You will need to install the gcc
 suite, atlas, scons, and boost by whatever means you prefer (note:
@@ -422,6 +427,7 @@ FreeBSD is NOT SUPPORTED
 =======================================================================
 
 			-----= Manjaro =-----
+			    (UNSUPPORTED)
 
 LOOS has been tested with Manjaro 0.8.10.  
 Make sure scons, boost, lapack, python, and swig are installed.  Also
@@ -430,6 +436,7 @@ install NetCDF, if you want NetCDF support.  LOOS and PyLOOS should build.
 ========================================================================
 
 			-----= Slackware =-----
+			    (UNSUPPORTED)
 
 LOOS has been tested with Slackware 14.1.  You will need to install,
 by whatever means you prefer, lapack, blas, and scons.  LOOS and PyLOOS
